--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "url": "https://github.com/flushentitypacket/react-infinity-scroll/issues"
   },
   "homepage": "https://github.com/flushentitypacket/react-infinity-scroll",
+  "peerDependencies": {
+    "react": "^0.14.0 || ^15.0.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1"
+    "babel-preset-react": "^6.11.1",
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0"
   }
 }
