--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
+  },
+  "dependencies": {
+    "react-waypoint": "~3.1"
   }
 }
